--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "watch": "vite build --watch"
   },
   "dependencies": {
-    "@ffmpeg/ffmpeg": "^0.12.10",
-    "@ffmpeg/util": "^0.12.1",
+    "chrome-devtools-mcp": "^0.12.1",
+    "gifenc": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -21,7 +21,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "vite-plugin-static-copy": "^1.0.0"
+    "vite": "^7.3.1",
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
