one tab on youtube, allows trimming and converting on the same side panel

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_title": "Create GIF from YouTube Video",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
